WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119378
Layout should force a StyleResolver rebuild if there isn't one at all.
https://bugs.webkit.org/show_bug.cgi?id=119378
Summary
Layout should force a StyleResolver rebuild if there isn't one at all.
Andreas Kling
Reported
2013-07-31 23:11:31 PDT
Layout should force a StyleResolver rebuild if there isn't one at all.
Attachments
Proposed patch
(1.80 KB, patch)
2013-07-31 23:18 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-07-31 23:18:27 PDT
Created
attachment 207898
[details]
Proposed patch
kov's GTK+ EWS bot
Comment 2
2013-07-31 23:44:51 PDT
Comment on
attachment 207898
[details]
Proposed patch
Attachment 207898
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/1310003
Antti Koivisto
Comment 3
2013-08-01 04:45:49 PDT
Comment on
attachment 207898
[details]
Proposed patch Is this testable?
WebKit Commit Bot
Comment 4
2013-08-01 12:18:31 PDT
Comment on
attachment 207898
[details]
Proposed patch Clearing flags on attachment: 207898 Committed
r153595
: <
http://trac.webkit.org/changeset/153595
>
WebKit Commit Bot
Comment 5
2013-08-01 12:18:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug